--- a/style.css
+++ b/style.css
@@ -192,10 +192,14 @@ header .logo-mobile {
 }
 
 .interface .recette-wrapper .recette-list .recette {
+  width: 80%;
+  margin: 0 auto;
   padding-bottom: 4em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-line-pack: center;
+      align-content: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-flow: column nowrap;
@@ -203,13 +207,14 @@ header .logo-mobile {
 }
 
 .interface .recette-wrapper .recette-list .recette .recette-image {
-  width: 70%;
+  width: 100%;
   margin: 0 auto;
 }
 
 .interface .recette-wrapper .recette-list .recette .recette-titre {
   text-align: center;
   font-size: 1rem;
+  line-height: 1.5rem;
   padding-top: 1.5em;
   padding-bottom: 1em;
 }
